Añadir una seccin de los productos

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,7 +4,47 @@
             <app-whereare></app-whereare>
         </section>
 
-        <div class="flex-container-row aligneSelf">
+        <div class="flex-container-row">
+            
+            <div class="flex-container-col">
+                <h4>Miels</h4>
+
+                <a href="" class="headerONE truckWrapper slit-in-vertical "
+                    style="background:url('./assets/img/honey-823614_1280.jpg') no-repeat center center; background-size:100% 70%;"
+                    routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
+                </a>
+            </div>
+            <div class="flex-container-col">
+                <h4>Pollen</h4>
+
+                <a href="" class="headerONE truckWrapper slit-in-vertical "
+                    style="background:url('./assets/img/ai-generated-8497387_1280.webp') no-repeat center center; background-size:100% 70%;"
+                    routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
+                </a>
+            </div>
+            <div class="flex-container-col">
+                <h4>Coursos</h4>
+
+
+                <a href="" class="headerONE truckWrapper slit-in-vertical "
+                    style="background:url('./assets/img/beekeeping-6206413_1280.png') no-repeat center center; background-size:100% 70%;"
+                    routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
+                </a>
+            </div>
+
+            <div class="flex-container-col">
+                <h4>Material</h4>
+
+
+                <a href="" class="headerONE truckWrapper slit-in-vertical "
+                    style="background:url('./assets/img/beekeeping-6206413_1280.png') no-repeat center center; background-size:100% 70%;"
+                    routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
+                </a>
+            </div>
+
+        </div>
+
+        <div class="flex-container-row">
             <section>
                 <app-contact-us></app-contact-us>
             </section>
