--- a/src/styles.css
+++ b/src/styles.css
@@ -198,37 +198,26 @@ input[type="text"] {
   color: #000000;
   text-shadow: 0 1px 0 #000000;
 }
-/* 
-.social-buttons {
+
+
+.truckWrapper {
+  width: 200px;
+  height: 100px;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  position: relative;
   align-items: center;
-  padding: 2px 5px;
-  border-radius: 5em;
+  justify-content: flex-end;
+  overflow-x: hidden;
 }
 
-.social-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  margin: 0 10px;
-  background-color: var(--honey-color);
-  box-shadow: 0px 0px 4px var(--box-shadow-color);
-  transition: 0.3s;
+/* truck upper body */
+.truckBody {
+  width: 130px;
+  height: fit-content;
+  margin-bottom: 6px;
+  animation: motion 1s linear infinite;
 }
-
-.social-button:hover {
-  background-color: var(--honey-color);
-  box-shadow: 0px 0px 6px 3px var(--box-shadow-color);
-}
-
-.social-buttons svg {
-  transition: 0.3s;
-  height: 20px;
-} */
 
 /** #####################################################
   #                 TEXT ALIGNATION                   #
