--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,46 +5,6 @@
         </section>
 
         <div class="flex-container-row">
-            
-            <div class="flex-container-col">
-                <h4>Miels</h4>
-
-                <a href="" class="headerONE truckWrapper slit-in-vertical "
-                    style="background:url('./assets/img/honey-823614_1280.jpg') no-repeat center center; background-size:100% 70%;"
-                    routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
-                </a>
-            </div>
-            <div class="flex-container-col">
-                <h4>Pollen</h4>
-
-                <a href="" class="headerONE truckWrapper slit-in-vertical "
-                    style="background:url('./assets/img/ai-generated-8497387_1280.webp') no-repeat center center; background-size:100% 70%;"
-                    routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
-                </a>
-            </div>
-            <div class="flex-container-col">
-                <h4>Coursos</h4>
-
-
-                <a href="" class="headerONE truckWrapper slit-in-vertical "
-                    style="background:url('./assets/img/beekeeping-6206413_1280.png') no-repeat center center; background-size:100% 70%;"
-                    routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
-                </a>
-            </div>
-
-            <div class="flex-container-col">
-                <h4>Material</h4>
-
-
-                <a href="" class="headerONE truckWrapper slit-in-vertical "
-                    style="background:url('./assets/img/beekeeping-6206413_1280.png') no-repeat center center; background-size:100% 70%;"
-                    routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
-                </a>
-            </div>
-
-        </div>
-
-        <div class="flex-container-row">
             <section>
                 <app-contact-us></app-contact-us>
             </section>
@@ -52,6 +12,49 @@
                 <app-follow-us></app-follow-us>
             </section>
         </div>
+        <div class="flex-container-col">
+            <h2 class="title">Nuestros productos</h2>
+            <div class="flex-container-row">
+
+                <div class="flex-container-col">
+                    <h4>{{'Honey'|translate}}</h4>
+
+                    <a href="" class="headerONE truckWrapper slit-in-vertical "
+                        style="background:url('./assets/img/honey-823614_1280.jpg') no-repeat center center; background-size:100% 70%;"
+                        routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
+                    </a>
+                </div>
+                <div class="flex-container-col">
+                    <h4>Pollen</h4>
+
+                    <a href="" class="headerONE truckWrapper slit-in-vertical "
+                        style="background:url('./assets/img/ai-generated-8497387_1280.webp') no-repeat center center; background-size:100% 70%;"
+                        routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
+                    </a>
+                </div>
+                <div class="flex-container-col">
+                    <h4>{{'Cours.Title'|translate}}</h4>
+
+
+                    <a href="" class="headerONE truckWrapper slit-in-vertical "
+                        style="background:url('./assets/img/beekeeping-6206413_1280.png') no-repeat center center; background-size:100% 70%;"
+                        routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
+                    </a>
+                </div>
+
+                <div class="flex-container-col">
+                    <h4>{{'Material.Title'| translate}}</h4>
+
+
+                    <a href="" class="headerONE truckWrapper slit-in-vertical "
+                        style="background:url('./assets/img/beekeeping-6206413_1280.png') no-repeat center center; background-size:100% 70%;"
+                        routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
+                    </a>
+                </div>
+
+            </div>
+        </div>
+
 
         <section>
             <app-delivery></app-delivery>
