--- a/src/app/about/whereare/whereare.component.html
+++ b/src/app/about/whereare/whereare.component.html
@@ -1,6 +1,20 @@
 <section [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
     <h3 class="title">{{'About.whereAre.Title'|translate}}</h3>
-    <p>
-        <q><span>{{'About.whereAre.Region'|translate}}</span> {{'About.whereAre.Located'|translate}}</q>
-    </p>
+    <div class="container">
+        <div class="flex-container">
+            <div class="flex-item">
+                <iframe class="flex-item1"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105885.07179715105!2d-6.939664507842876!3d33.96919139212627!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xda76b871f50c5c1%3A0x7ac946ed7408076b!2sRabat%2C%20Marruecos!5e0!3m2!1ses!2ses!4v1719930107154!5m2!1ses!2ses"
+                    frameborder="0" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div class="flex-item">
+                <p>
+                    <q><span>{{'About.whereAre.Region'|translate}}</span> {{'About.whereAre.Located'|translate}}</q>
+                </p>
+            </div>
+
+        </div>
+    </div>
+
 </section>
