--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<section class="flex-container">
+<section class="content flex-container">
     <div class="flex-container-col">
         <section>
             <app-whereare></app-whereare>
