--- a/src/styles.css
+++ b/src/styles.css
@@ -179,6 +179,7 @@ input[type="text"] {
   display: flex;
   justify-content: space-evenly;
   flex-direction: column;
+  align-items: center;
 }
 
 .flex-container-row {
