--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -57,9 +57,11 @@
 
 
         <section>
+
             <app-delivery></app-delivery>
         </section>
         <section>
+            <h3 class="title">Condition de ventes</h3>
             <app-policies></app-policies>
         </section>
 
