--- a/src/app/about/policies/policies.component.html
+++ b/src/app/about/policies/policies.component.html
@@ -1,7 +1,8 @@
 <section>
     <div class="flex-container ltr">
-        <div class="flex-container-col">
-            <h3 class="title">Condition de ventes</h3>
+       
+        <div class="">
+            
             <p>Nous nous engageons à fournir des produits de qualité supérieure à nos clients. Si pour une raison
                 quelconque, vous
                 n'êtes pas satisfait de votre achat, veuillez nous contacter dans les 14 jours suivant la réception de
