--- a/src/styles.css
+++ b/src/styles.css
@@ -179,7 +179,7 @@ input[type="text"] {
   display: flex;
   justify-content: space-evenly;
   flex-direction: column;
-  align-items: center;
+
 }
 
 .flex-container-row {
@@ -257,6 +257,10 @@ input[type="text"] {
   }
   .flex-container-row{
     flex-direction:column ;
+    align-items: center;
+  }
+  .flex-container-col{
+    align-items: center;
   }
 }
 
@@ -266,12 +270,14 @@ input[type="text"] {
   }
   .flex-container-row{
     flex-direction:column ;
+    align-items: center;
   }
 
   .flex-container {
     flex-direction: column-reverse;
   }
-  .flex-container-row{
-    flex-direction:column ;
+
+  .flex-container-col{
+    align-items: center;
   }
 }
