--- a/src/styles.css
+++ b/src/styles.css
@@ -253,7 +253,8 @@ input[type="text"] {
   }
 
   .flex-container {
-    flex-direction: column-reverse;
+    flex-direction: column;
+    align-items: center;
   }
   .flex-container-row{
     flex-direction:column ;
