--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
     <h1> {{ 'Titles.Heart_Of_Nature' | translate}}</h1>
     <div class="flex-container">
 
-      <div class="flex-item flex-container-col">
+      <div class="flex-item">
         
         <p>{{ 'Home.Parraph' | translate}}</p>
       </div>
