--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <header class="brand-name containerHeader">
         <nav class="flex-header-row">
             <a class="spanMHS menu__link" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/">
-                {{'Home.HomeTitle'| translate}}
+                {{'Home.Title'| translate}}
             </a>
 
         </nav>
