--- a/src/app/functionalities/menuburger/menuburger.component.html
+++ b/src/app/functionalities/menuburger/menuburger.component.html
@@ -12,5 +12,8 @@
     <a class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/blog">
       {{'About.Title'|translate}}
     </a>
+    <a class="spanMHS menu__link" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/cours">
+      {{'Cours.Title'|translate}}
+    </a>
   </div>
 </div>
