--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
   </form>
 </section>
 <section>
-  <div class="container">
+  <div class="container" [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
     <h1> {{ 'Titles.Heart_Of_Nature' | translate}}</h1>
     <div class="flex-container">
 
@@ -15,7 +15,7 @@
         <p>{{ 'Home.Parraph' | translate}}</p>
       </div>
       <div class="flex-item">
-        <iframe class="flex-item1" src="https://www.youtube.com/embed/MiHycjTTWcU">
+        <iframe class="" src="https://www.youtube.com/embed/MiHycjTTWcU">
         </iframe>
       </div>
 
@@ -25,16 +25,16 @@
 </section>
 
 
-<h1>{{'Honeys'|translate}}</h1>
+<h1 [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">{{'Honeys'|translate}}</h1>
 <section class="results">
   <app-housing-location *ngFor="let housingLocation of filteredLocationList" [housingLocation]="housingLocation">
   </app-housing-location>
 </section>
-<h1>{{'Cours.Title'|translate}}</h1>
+<h1 [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">{{'Cours.Title'|translate}}</h1>
 <section class="results">
   <app-courses-honey *ngFor="let coursHoney of coursesHoneyList" [coursHoney]="coursHoney"></app-courses-honey>
 </section>
-<h1>{{'Material.Title'|translate}}</h1>
+<h1 [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">{{'Material.Title'|translate}}</h1>
 <section class="results">
   <app-material-honey *ngFor="let materialHoney of materialHoneyList"
     [materialHoney]="materialHoney"></app-material-honey>
