añadir la seccion About al menu burger

--- a/src/app/functionalities/menuburger/menuburger.component.html
+++ b/src/app/functionalities/menuburger/menuburger.component.html
@@ -9,7 +9,7 @@
     <a class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/blog">
       {{'Blog.Title'|translate}}
     </a>
-    <a class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/blog">
+    <a class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/about">
       {{'About.Title'|translate}}
     </a>
     <a class="spanMHS menu__link" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/cours">
