incluir scroll animation a los componente de la lista de productos

--- a/src/app/products/material-honey/material-honey.component.html
+++ b/src/app/products/material-honey/material-honey.component.html
@@ -1,5 +1,5 @@
 <section class="listing">
-    <img class="listing-photo" [src]="materialHoney.photo" alt="Exterior photo of {{materialHoney.title}}">
+    <img class="listing-photo animated-img" [src]="materialHoney.photo" alt="Exterior photo of {{materialHoney.title}}">
     <h2 class="listing-heading">{{ materialHoney.title }}</h2>
     <p class="listing-location">{{ materialHoney.ubication}}, {{materialHoney.price }}</p>
     <a [routerLink]="['/detailsMaterial', materialHoney.id]">Learn More</a>
