--- a/src/app/products/courses-honey/courses-honey.component.html
+++ b/src/app/products/courses-honey/courses-honey.component.html
@@ -1,5 +1,5 @@
 <section class="listing">
-  <img class="listing-photo" [src]="coursHoney.photo" alt="Exterior photo of {{coursHoney.title}}">
+  <img class="listing-photo animated-img" [src]="coursHoney.photo" alt="Exterior photo of {{coursHoney.title}}">
   <h2 class="listing-heading">{{ coursHoney.title }}</h2>
   <p class="listing-location">{{ coursHoney.ubication}}, {{coursHoney.price }}</p>
   <a [routerLink]="['/detailsCours', coursHoney.id]">Learn More</a>
