--- a/src/styles.css
+++ b/src/styles.css
@@ -67,15 +67,21 @@ button.primary {
   width: 100%;
   object-fit: cover;
   border-radius: 30px 30px 0 0;
+
+}
+
+
+
+.animated-img{
   transform: translateX(400%);
   transition: all 0.4s ease ;
 }
 
-.listing-photo:nth-of-type(even){
+.animated-img:nth-of-type(even){
   transform: translateX(400%);
 }
 
-.listing-photo.show{
+.animated-img.show{
   transform: translateX(0);
 }
 
