--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <main>
 
-    <header class="brand-name containerHeader">
+    <header class="brand-name containerHeader menus">
         <nav class="flex-header-row">
             <a class="spanMHS menu__link" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/">
                 {{'Home.Title'| translate}}
