--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -12,48 +12,89 @@
                 <app-follow-us></app-follow-us>
             </section>
         </div>
-        <div class="flex-container-col">
+
+        
+        <section>
             <h2 class="title">Nuestros productos</h2>
             <div class="flex-container-row">
 
-                <div class="flex-container-col">
-                    <h4>{{'Honey'|translate}}</h4>
 
-                    <a href="" class="headerONE truckWrapper slit-in-vertical "
-                        style="background:url('./assets/img/honey-823614_1280.jpg') no-repeat center center; background-size:100% 70%;"
-                        routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
-                    </a>
-                </div>
-                <div class="flex-container-col">
-                    <h4>Pollen</h4>
-
-                    <a href="" class="headerONE truckWrapper slit-in-vertical "
-                        style="background:url('./assets/img/ai-generated-8497387_1280.webp') no-repeat center center; background-size:100% 70%;"
-                        routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
-                    </a>
-                </div>
-                <div class="flex-container-col">
-                    <h4>{{'Cours.Title'|translate}}</h4>
-
-
-                    <a href="" class="headerONE truckWrapper slit-in-vertical "
-                        style="background:url('./assets/img/beekeeping-6206413_1280.png') no-repeat center center; background-size:100% 70%;"
-                        routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
-                    </a>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="./assets/img/honey-823614_1280.jpg" alt="">
+                        <div class="titleCard">{{'Honey'|translate}}</div>
+                        <div class="overlay"></div>
+                    </div>
+                    <div class="product-info">
+                        <p>Nombre</p>
+                        <div class="product-price">65</div>
+                        <button class="btn-buy">
+                            <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
+                                routerLink="/benefit"> ver nuestros productos
+                            </a>
+                        </button>
+                    </div>
                 </div>
 
-                <div class="flex-container-col">
-                    <h4>{{'Material.Title'| translate}}</h4>
-
-
-                    <a href="" class="headerONE truckWrapper slit-in-vertical "
-                        style="background:url('./assets/img/beekeeping-6206413_1280.png') no-repeat center center; background-size:100% 70%;"
-                        routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
-                    </a>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="./assets/img/bee-1299363_1280.png" alt="">
+                        <div class="titleCard">Pollen</div>
+                        <div class="overlay"></div>
+                    </div>
+                    <div class="product-info">
+                        <p>Nombre</p>
+                        <div class="product-price">65</div>
+                        <button class="btn-buy">
+                            <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
+                                routerLink="/benefit"> ver nuestros productos
+                            </a>
+                        </button>
+                    </div>
                 </div>
+
+
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="./assets/img/beekeeping-6206413_1280.png" alt="">
+                        <div class="titleCard">{{'Cours.Title'|translate}}</div>
+                        <div class="overlay"></div>
+                    </div>
+                    <div class="product-info">
+                        <p>Nombre</p>
+                        <div class="product-price">65</div>
+                        <button class="btn-buy">
+                            <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
+                                routerLink="/benefit"> ver nuestros productos
+                            </a>
+                        </button>
+                    </div>
+                </div>
+
+
+
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="./assets/img/bee-2022492_1280.webp" alt="">
+                        <div class="titleCard">{{'Material.Title'| translate}}</div>
+                        <div class="overlay"></div>
+                    </div>
+                    <div class="product-info">
+                        <p>Nombre</p>
+                        <div class="product-price">65</div>
+                        <button class="btn-buy">
+                            <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
+                                routerLink="/benefit"> ver nuestros productos
+                            </a>
+                        </button>
+                    </div>
+                </div>
+
 
             </div>
-        </div>
+        </section>
+
+
 
 
         <section>
