--- a/src/app/about/activities/activities.component.html
+++ b/src/app/about/activities/activities.component.html
@@ -14,7 +14,7 @@
                 <div class="product-price">65</div>
                 <button class="btn-buy">
                     <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
-                        routerLink="/benefit"> ver nuestros productos
+                        routerLink="/"> ver nuestros productos
                     </a>
                 </button>
             </div>
@@ -31,7 +31,7 @@
                 <div class="product-price">65</div>
                 <button class="btn-buy">
                     <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
-                        routerLink="/benefit"> ver nuestros productos
+                        routerLink="/Cours"> ver nuestros productos
                     </a>
                 </button>
             </div>
@@ -49,7 +49,7 @@
                 <div class="product-price">65</div>
                 <button class="btn-buy">
                     <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
-                        routerLink="/benefit"> ver nuestros productos
+                        routerLink="/cours"> ver nuestros productos
                     </a>
                 </button>
             </div>
@@ -68,7 +68,7 @@
                 <div class="product-price">65</div>
                 <button class="btn-buy">
                     <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
-                        routerLink="/benefit"> ver nuestros productos
+                        routerLink="/material"> ver nuestros productos
                     </a>
                 </button>
             </div>
