--- a/src/app/housing-location/details/details.component.html
+++ b/src/app/housing-location/details/details.component.html
@@ -13,7 +13,7 @@
       </section>
 
       <section *ngIf="housingLocation?.category === 'HH'">
-        <app-benefit-herbal-honey></app-benefit-herbal-honey>
+        <app-blog-herbal-honey></app-blog-herbal-honey>
       </section>
 
       <section *ngIf="housingLocation?.category === 'HC'">
