--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,40 +1,44 @@
-
 <section [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
   <form>
     <input type="text" placeholder="Filter by city" #filter>
     <button class="primary" type="button" (click)="filterResults(filter.value)">Search</button>
   </form>
 </section>
+
 <section>
   <div class="container" [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
-    <h1> {{ 'Titles.Heart_Of_Nature' | translate}}</h1>
+    <h1 class="title"> {{ 'Titles.Heart_Of_Nature' | translate}}</h1>
     <div class="flex-container">
-
       <div class="flex-item">
-        
         <p>{{ 'Home.Parraph' | translate}}</p>
       </div>
       <div class="flex-item">
         <iframe class="" src="https://www.youtube.com/embed/MiHycjTTWcU">
         </iframe>
       </div>
-
     </div>
   </div>
-
 </section>
 
+<section>
+  <app-activities></app-activities>
+</section>
 
-<h1 [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">{{'Honeys'|translate}}</h1>
+<h1 [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">{{'Honeys'|translate}}
+</h1>
 <section class="results">
   <app-housing-location *ngFor="let housingLocation of filteredLocationList" [housingLocation]="housingLocation">
   </app-housing-location>
 </section>
-<h1 [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">{{'Cours.Title'|translate}}</h1>
+
+<h1 [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
+  {{'Cours.Title'|translate}}</h1>
 <section class="results">
   <app-courses-honey *ngFor="let coursHoney of coursesHoneyList" [coursHoney]="coursHoney"></app-courses-honey>
 </section>
-<h1 [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">{{'Material.Title'|translate}}</h1>
+
+<h1 [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
+  {{'Material.Title'|translate}}</h1>
 <section class="results">
   <app-material-honey *ngFor="let materialHoney of materialHoneyList"
     [materialHoney]="materialHoney"></app-material-honey>
