--- a/src/app/housing-location/details/details.component.html
+++ b/src/app/housing-location/details/details.component.html
@@ -1,48 +1,60 @@
-<article [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
-  <div class="flex-container">
-    <div class="flex-container-col">
-      <section class="listing-description">
-        <h2 class="listing-heading">{{housingLocation?.name}}</h2>
-        <p class="listing-location">{{housingLocation?.city}}</p>
-        <p class="">Precio: {{housingLocation?.price}}</p>
-
-        <ul>
-          <li>Ubicación: {{housingLocation?.state}}</li>
-          <li>Categoria: {{housingLocation?.category}}</li>
-        </ul>
-      </section>
-
-      <section *ngIf="housingLocation?.category === 'HH'">
-        <app-blog-herbal-honey></app-blog-herbal-honey>
-      </section>
-
-      <section *ngIf="housingLocation?.category === 'HC'">
-        <h1>Es una prueba</h1>
-        <p>A la espra de definir y preparar el resto de tipos De momemnto solo tengo lso benificios de la miel
-          Milaflores
-        </p>
-      </section>
+<!-- <section [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
+        <section class="listing-apply">-->
+<!--<h2 class="section-heading">Apply now to live here</h2>
+        <form [formGroup]="applyForm" (submit)="submitApplication()">
+          <label for="first-name">First Name</label>
+          <input id="first-name" type="text" formControlName="firstName">
+  
+          <label for="last-name">Last Name</label>
+          <input id="last-name" type="text" formControlName="lastName">
+  
+          <label for="email">Email</label>
+          <input id="email" type="email" formControlName="email">
+          <button type="submit" class="primary">Apply now</button>
+        </form> -->
+<!-- </section>
     </div>
-    <div>
-      <img class="listing-photo" [src]="housingLocation?.photo" alt="Exterior photo of {{housingLocation?.name}}" />
+  </div>
+
+
+</section> -->
+
+<section [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
+  <h3 class="title">{{housingLocation?.name}}</h3>
+  <div class="container">
+    <div class="flex-container">
+
+      <div class="flex-item">
+        <div class="flex-container-col">
+          <section class="listing-description">
+            <p class="listing-location">{{housingLocation?.city}}</p>
+            <p class="">Precio: {{housingLocation?.price}}</p>
+            <p>Ubicación: {{housingLocation?.state}}</p>
+            <p>Categoria: {{housingLocation?.category}}</p>
+
+          </section>
+          <section *ngIf="housingLocation?.category === 'HH'">
+            <app-blog-herbal-honey></app-blog-herbal-honey>
+          </section>
+
+          <section *ngIf="housingLocation?.category === 'HC'">
+            <h1>Es una prueba</h1>
+            <p>A la espra de definir y preparar el resto de tipos De momemnto solo tengo lso benificios de la miel
+              Milaflores
+            </p>
+          </section>
+        </div>
+
+      </div>
+      <div class="flex-item">
+        <img class="slit-in-vertical" [src]="housingLocation?.photo"
+          alt="Exterior photo of {{housingLocation?.name}}" />
+      </div>
+
     </div>
-
-
-
-    <section class="listing-apply">
-      <!--<h2 class="section-heading">Apply now to live here</h2>
-      <form [formGroup]="applyForm" (submit)="submitApplication()">
-        <label for="first-name">First Name</label>
-        <input id="first-name" type="text" formControlName="firstName">
-
-        <label for="last-name">Last Name</label>
-        <input id="last-name" type="text" formControlName="lastName">
-
-        <label for="email">Email</label>
-        <input id="email" type="email" formControlName="email">
-        <button type="submit" class="primary">Apply now</button>
-      </form> -->
+    <section>
+      <p>Produit Similar</p>
     </section>
   </div>
 
-</article>
+</section>
