--- a/src/styles.css
+++ b/src/styles.css
@@ -170,6 +170,31 @@ section.listing a::after {
   transform: translateX(0);
 }
 
+
+.slit-in-vertical {
+  animation: slit-in-vertical 0.45s ease-out both;
+}
+
+@keyframes slit-in-vertical {
+  0% {
+    transform: translateZ(-800px) rotateY(90deg);
+    opacity: 0;
+  }
+
+  54% {
+    transform: translateZ(-160px) rotateY(87deg);
+    opacity: 1;
+  }
+
+  100% {
+    transform: translateZ(0) rotateY(0);
+  }
+}
+
+.slide-in-elliptic-top-fwd {
+  animation: slide-in-elliptic-top-fwd 0.7s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
 /** #####################################################
     #                      ESTILO LISTAS                #
     #####################################################*/
@@ -215,7 +240,7 @@ section.listing a::after {
   flex: 1 1 calc(50% - 10px);
   /* Cada elemento ocupa aproximadamente el 50% del ancho menos el margen */
   margin: 5px;
-  height: 300px;
+  height: 100%;
   /* Ajusta la altura según sea necesario */
   display: flex;
   align-items: center;
