contenido del componente whereare

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,7 +47,7 @@
             <!-- <h4 class="AlignTxtCenter styleTitle">{{ 'About_Us' | translate}}</h4> -->
             <h4 class="title honey-color">{{ 'About_Us' | translate}}</h4>
             <nav class="flex-container-col">
-                <a class="honey-color" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/blog">
+                <a class="honey-color" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/whereare">
                     {{'About.whereAre.Title'| translate}}
 
                 </a>
