--- a/src/app/about/whereare/whereare.component.html
+++ b/src/app/about/whereare/whereare.component.html
@@ -17,5 +17,11 @@
 
         </div>
     </div>
+    <section>
+        <app-contact-us></app-contact-us>
+    </section>
+    <section>
+        <app-follow-us></app-follow-us>
+    </section>
 
 </section>
