recolocar los componentes

--- a/src/app/about/whereare/whereare.component.html
+++ b/src/app/about/whereare/whereare.component.html
@@ -17,11 +17,18 @@
 
         </div>
     </div>
+
     <section>
-        <app-contact-us></app-contact-us>
+        <app-activities></app-activities>
     </section>
-    <section>
-        <app-follow-us></app-follow-us>
-    </section>
+
+    <div class="container flex-container-row">
+        <section>
+            <app-contact-us></app-contact-us>
+        </section>
+        <section>
+            <app-follow-us></app-follow-us>
+        </section>
+    </div>
 
 </section>
