--- a/src/app/about/contact-us/contact-us.component.html
+++ b/src/app/about/contact-us/contact-us.component.html
@@ -1,6 +1,6 @@
 <section [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
     <h3 class="title">{{'About.Contact_Us.Title'|translate}}</h3>
-    <div class="list-contact">
+    <div class="conatainer list-contact">
         <ul class="footer-block__details-content list-unstyled">
             <li>
                 <p class="footer-grid2-p"><span> <svg width="15" height="15" viewBox="0 0 15 15" fill="none"
