--- a/src/app/about/activities/activities.component.html
+++ b/src/app/about/activities/activities.component.html
@@ -1,80 +1,82 @@
 <section>
     <h2 class="title">Nuestros productos</h2>
-    <div class="flex-container-row">
+    <div class="container">
+        <div class="flex-container-row">
 
 
-        <div class="product-card">
-            <div class="product-image">
-                <img src="./assets/img/honey-823614_1280.jpg" alt="">
-                <div class="titleCard">{{'Honey'|translate}}</div>
-                <div class="overlay"></div>
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="./assets/img/honey-823614_1280.jpg" alt="">
+                    <div class="titleCard">{{'Honey'|translate}}</div>
+                    <div class="overlay"></div>
+                </div>
+                <div class="product-info">
+                    <p>Nombre</p>
+                    <div class="product-price">65</div>
+                    <button class="btn-buy">
+                        <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/">
+                            ver nuestros productos
+                        </a>
+                    </button>
+                </div>
             </div>
-            <div class="product-info">
-                <p>Nombre</p>
-                <div class="product-price">65</div>
-                <button class="btn-buy">
-                    <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
-                        routerLink="/"> ver nuestros productos
-                    </a>
-                </button>
+
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="./assets/img/bee-1299363_1280.png" alt="">
+                    <div class="titleCard">Pollen</div>
+                    <div class="overlay"></div>
+                </div>
+                <div class="product-info">
+                    <p>Nombre</p>
+                    <div class="product-price">65</div>
+                    <button class="btn-buy">
+                        <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
+                            routerLink="/Cours"> ver nuestros productos
+                        </a>
+                    </button>
+                </div>
             </div>
+
+
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="./assets/img/beekeeping-6206413_1280.png" alt="">
+                    <div class="titleCard">{{'Cours.Title'|translate}}</div>
+                    <div class="overlay"></div>
+                </div>
+                <div class="product-info">
+                    <p>Nombre</p>
+                    <div class="product-price">65</div>
+                    <button class="btn-buy">
+                        <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
+                            routerLink="/cours"> ver nuestros productos
+                        </a>
+                    </button>
+                </div>
+            </div>
+
+
+
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="./assets/img/bee-2022492_1280.webp" alt="">
+                    <div class="titleCard">{{'Material.Title'| translate}}</div>
+                    <div class="overlay"></div>
+                </div>
+                <div class="product-info">
+                    <p>Nombre</p>
+                    <div class="product-price">65</div>
+                    <button class="btn-buy">
+                        <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
+                            routerLink="/material"> ver nuestros productos
+                        </a>
+                    </button>
+                </div>
+            </div>
+
+
         </div>
-
-        <div class="product-card">
-            <div class="product-image">
-                <img src="./assets/img/bee-1299363_1280.png" alt="">
-                <div class="titleCard">Pollen</div>
-                <div class="overlay"></div>
-            </div>
-            <div class="product-info">
-                <p>Nombre</p>
-                <div class="product-price">65</div>
-                <button class="btn-buy">
-                    <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
-                        routerLink="/Cours"> ver nuestros productos
-                    </a>
-                </button>
-            </div>
-        </div>
-
-
-        <div class="product-card">
-            <div class="product-image">
-                <img src="./assets/img/beekeeping-6206413_1280.png" alt="">
-                <div class="titleCard">{{'Cours.Title'|translate}}</div>
-                <div class="overlay"></div>
-            </div>
-            <div class="product-info">
-                <p>Nombre</p>
-                <div class="product-price">65</div>
-                <button class="btn-buy">
-                    <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
-                        routerLink="/cours"> ver nuestros productos
-                    </a>
-                </button>
-            </div>
-        </div>
-
-
-
-        <div class="product-card">
-            <div class="product-image">
-                <img src="./assets/img/bee-2022492_1280.webp" alt="">
-                <div class="titleCard">{{'Material.Title'| translate}}</div>
-                <div class="overlay"></div>
-            </div>
-            <div class="product-info">
-                <p>Nombre</p>
-                <div class="product-price">65</div>
-                <button class="btn-buy">
-                    <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
-                        routerLink="/material"> ver nuestros productos
-                    </a>
-                </button>
-            </div>
-        </div>
-
-
     </div>
-</section>
 
+</section>
