trabajar sobre el blog

--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,6 +1,210 @@
-<section class="flex-container">
-    <section>
-        <app-blog-herbal-honey></app-blog-herbal-honey>
-    </section>
+<section>
+    <h2 class="title">{{'Blog.Title'|translate}}</h2>
+    <div class="container">
+        <div class="flex-container">
+
+
+            <div class="product-card">
+                
+                <div class="product-image">
+                    <img src="./assets/img/honey-823614_1280.jpg" alt="">
+                    <!-- <div class="titleCard">{{'Honey'|translate}}</div> -->
+                    <div class="overlay"></div>
+                </div>
+                <div class="product-info">
+                    <h4 class="">{{'Benifices.Title'|translate}}</h4>
+                    <p class="product-description">{{'BenificesHerbalHoney.PHerbalHoney'| translate}}</p>
+                    
+                    <button class="btn-buy">
+                        <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
+                            Learn More
+                        </a>
+                    </button>
+                </div>
+            </div>
+
+            <div class="product-card">
+                
+                <div class="product-image">
+                    <iframe width="100%" height="200" src="https://www.youtube.com/embed/ozw_YhcH_r8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <!-- <div class="titleCard">{{'Honey'|translate}}</div> -->
+                    <div class="overlay"></div>
+                </div>
+                <div class="product-info">
+                    <h4 class="">El apiario más grande del mundo</h4>
+                    <p class="product-description">El apiario más grande del mundo está en Marruecos y admite más de 3500 colmenas</p>
+                    
+                    <button class="btn-buy">
+                        <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/inzerki">
+                            Learn More
+                        </a>
+                    </button>
+                </div>
+            </div>
+
+            <div class="product-card">
+                
+                <div class="product-image">
+                    <!-- <img src="./assets/img/honey-823614_1280.jpg" alt=""> -->
+                    <iframe width="100%" height="200" src="https://www.youtube.com/embed/cIhyqCPZprA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="overlay"></div>
+                </div>
+                <div class="product-info">
+                    <h4 class="">{{'Benifices.Title'|translate}}</h4>
+                    <p class="product-description">{{'BenificesHerbalHoney.PHerbalHoney'| translate}}</p>
+                    
+                    <button class="btn-buy">
+                        <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
+                            Learn More
+                        </a>
+                    </button>
+                </div>
+            </div>
+
+
+
+            <div class="product-card">
+                
+                <div class="product-image">
+                    <iframe width="100%" height="200" src="https://www.youtube.com/embed/FDCALQ0kbxM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <!-- <div class="titleCard">{{'Honey'|translate}}</div> -->
+                    <div class="overlay"></div>
+                </div>
+                <div class="product-info">
+                    <h4 class="">Un monde sans abeilles</h4>
+                    <p class="product-description">{{'BenificesHerbalHoney.PHerbalHoney'| translate}}</p>
+                    
+                    <button class="btn-buy">
+                        <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
+                            Learn More
+                        </a>
+                    </button>
+                </div>
+            </div>
+
+            <div class="product-card">
+                
+                <div class="product-image">
+                    <iframe width="100%" height="200" src="https://www.youtube.com/embed/zm9rUhqkX6c" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <!-- <div class="titleCard">{{'Honey'|translate}}</div> -->
+                    <div class="overlay"></div>
+                </div>
+                <div class="product-info">
+                    <h4 class="">Et Si Tu Devenais Une Abeille Pour 24 Heures</h4>
+                    <p class="product-description">{{'BenificesHerbalHoney.PHerbalHoney'| translate}}</p>
+                    
+                    <button class="btn-buy">
+                        <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
+                            Learn More
+                        </a>
+                    </button>
+                </div>
+            </div>
+
+
+        </div>
+        <div class="flex-container">
+
+
+            <div class="product-card">
+                
+                <div class="product-image">
+                    <img src="./assets/img/honey-823614_1280.jpg" alt="">
+                    <!-- <div class="titleCard">{{'Honey'|translate}}</div> -->
+                    <div class="overlay"></div>
+                </div>
+                <div class="product-info">
+                    <h4 class="">{{'Benifices.Title'|translate}}</h4>
+                    <p class="product-description">{{'BenificesHerbalHoney.PHerbalHoney'| translate}}</p>
+                    
+                    <button class="btn-buy">
+                        <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
+                            Learn More
+                        </a>
+                    </button>
+                </div>
+            </div>
+
+            <div class="product-card">
+                
+                <div class="product-image">
+                    <img src="./assets/img/honey-823614_1280.jpg" alt="">
+                    <!-- <div class="titleCard">{{'Honey'|translate}}</div> -->
+                    <div class="overlay"></div>
+                </div>
+                <div class="product-info">
+                    <h4 class="">{{'Benifices.Title'|translate}}</h4>
+                    <p class="product-description">{{'BenificesHerbalHoney.PHerbalHoney'| translate}}</p>
+                    
+                    <button class="btn-buy">
+                        <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
+                            Learn More
+                        </a>
+                    </button>
+                </div>
+            </div>
+
+            <div class="product-card">
+                
+                <div class="product-image">
+                    <img src="./assets/img/honey-823614_1280.jpg" alt="">
+                    <!-- <div class="titleCard">{{'Honey'|translate}}</div> -->
+                    <div class="overlay"></div>
+                </div>
+                <div class="product-info">
+                    <h4 class="">{{'Benifices.Title'|translate}}</h4>
+                    <p class="product-description">{{'BenificesHerbalHoney.PHerbalHoney'| translate}}</p>
+                    
+                    <button class="btn-buy">
+                        <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
+                            Learn More
+                        </a>
+                    </button>
+                </div>
+            </div>
+
+
+
+            <div class="product-card">
+                
+                <div class="product-image">
+                    <img src="./assets/img/honey-823614_1280.jpg" alt="">
+                    <!-- <div class="titleCard">{{'Honey'|translate}}</div> -->
+                    <div class="overlay"></div>
+                </div>
+                <div class="product-info">
+                    <h4 class="">{{'Benifices.Title'|translate}}</h4>
+                    <p class="product-description">{{'BenificesHerbalHoney.PHerbalHoney'| translate}}</p>
+                    
+                    <button class="btn-buy">
+                        <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
+                            Learn More
+                        </a>
+                    </button>
+                </div>
+            </div>
+
+            <div class="product-card">
+                
+                <div class="product-image">
+                    <img src="./assets/img/honey-823614_1280.jpg" alt="">
+                    <!-- <div class="titleCard">{{'Honey'|translate}}</div> -->
+                    <div class="overlay"></div>
+                </div>
+                <div class="product-info">
+                    <h4 class="">{{'Benifices.Title'|translate}}</h4>
+                    <p class="product-description">{{'BenificesHerbalHoney.PHerbalHoney'| translate}}</p>
+                    
+                    <button class="btn-buy">
+                        <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/benefit">
+                            Learn More
+                        </a>
+                    </button>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
 
 </section>
